--- a/app/src/main/res/layout/activity_lunar.xml
+++ b/app/src/main/res/layout/activity_lunar.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,10 +11,11 @@
         android:orientation="vertical">
 
         <com.coolerfall.widget.lunar.LunarView
-            android:id="@+id/main_lunar"
+            android:id="@+id/lunar_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:todayBackground="@drawable/ic_circle"/>
+
 
     </LinearLayout>
 
