--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,52 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="font_grand">120sp</dimen>
+    <dimen name="font_extrme_large">48sp</dimen>
+    <dimen name="font_extra_large">36sp</dimen>
+    <dimen name="font_largest">32sp</dimen>
+    <dimen name="font_larger">28sp</dimen>
+    <dimen name="font_large">24sp</dimen>
+    <dimen name="font_litle_large">22sp</dimen>
+    <dimen name="font_middle">20sp</dimen>
+    <dimen name="font_normal">18sp</dimen>
+    <dimen name="font_small">16sp</dimen>
+    <dimen name="font_little_small">15sp</dimen>
+    <dimen name="font_smaller">14sp</dimen>
+    <dimen name="font_smallest">12sp</dimen>
+    <dimen name="font_extra_small">10sp</dimen>
+    <dimen name="font_extreme_small">8sp</dimen>
+
+    <dimen name="margin_extreme_large">40dip</dimen>
+    <dimen name="margin_extra_large">36dip</dimen>
+    <dimen name="margin_largest">32dip</dimen>
+    <dimen name="margin_larger">28dip</dimen>
+    <dimen name="margin_large">24dip</dimen>
+    <dimen name="margin_little_large">22dip</dimen>
+    <dimen name="margin_middle">20dip</dimen>
+    <dimen name="margin_normal">16dip</dimen>
+    <dimen name="margin_little_small">14dip</dimen>
+    <dimen name="margin_small">12dip</dimen>
+    <dimen name="margin_smaller">8dip</dimen>
+    <dimen name="margin_smallest">6dip</dimen>
+    <dimen name="margin_extra_small">4dip</dimen>
+    <dimen name="margin_extreme_small">2dip</dimen>
+
+    <dimen name="padding_extreme_large">40dip</dimen>
+    <dimen name="padding_extra_large">36dip</dimen>
+    <dimen name="padding_largest">32dip</dimen>
+    <dimen name="padding_larger">28dip</dimen>
+    <dimen name="padding_large">24dip</dimen>
+    <dimen name="padding_little_large">22dip</dimen>
+    <dimen name="padding_middle">20dip</dimen>
+    <dimen name="padding_normal">16dip</dimen>
+    <dimen name="padding_little_small">14dip</dimen>
+    <dimen name="padding_small">12dip</dimen>
+    <dimen name="padding_smaller">8dip</dimen>
+    <dimen name="padding_smallest">6dip</dimen>
+    <dimen name="padding_extra_samll">4dip</dimen>
+    <dimen name="padding_extreme_samll">2dip</dimen>
+
+    <!-- special dimens -->
+    <dimen name="divider_size">0.8dip</dimen>
+
 </resources>
