--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="color_primary">#40c4ff</color>
-    <color name="color_primary_dark">#40c4ff</color>
+    <color name="color_primary_dark">#15b9ff</color>
     <color name="color_accent">#40c4ff</color>
 
     <color name="light_gray">#f0f0f0</color>
@@ -10,5 +10,8 @@
 
     <color name="text_red">#ff514e</color>
     <color name="text_dark_gray">#555050</color>
+
+    <!-- transparent -->
+    <color name="gray_transparent">#33686868</color>
 
 </resources>
