Add picker view and remove @since

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,9 @@
         <attr name="android:textStyle"/>
     </declare-styleable>
 
+    <declare-styleable name="PickerView">
+        <attr name="android:background" />
+    </declare-styleable>
+
+
 </resources>
